qnaList letter css

--- a/src/main/webapp/css/letter.css
+++ b/src/main/webapp/css/letter.css
@@ -177,7 +177,7 @@ h5 {
 	float: left;
 	margin-right: 20px;
 	overflow: hidden;
-	position: relative;
+	position: absolute; /*position: relative*/
 }
 
 .letter_span3 {
@@ -190,6 +190,7 @@ h5 {
 .letter_div10 {
 	width: 480px;
 	height: 88.4px;
+	margin-left: 135px; /*원래 없었음*/
 	overflow: hidden;
     padding: 0;
 }
@@ -528,6 +529,8 @@ b {
 	width: 360px;
     height: 68px;
     margin: 40px auto 0;
+/*     position: relative; */
+/* 	top: 538px; */
 }
 
 .letter_div20 {
@@ -573,6 +576,8 @@ b {
     letter-spacing: -.21px;
     color: #222;
     border-radius: 5px;
+    position: relative;
+    top: 538px;
 }
 
 .letter_textarea {
@@ -632,11 +637,32 @@ b {
     
 }
 
+/* .letter_img:before { */
+/* 	left: 0; */
+/*     right: 0; */
+/*     content: ''; */
+/*     position: absolute; */
+/*     top: 0; */
+/*     height: 8px; */
+/*     background-color: #f7f7f7; */
+/* } */
 
+.letter_span19:after {
+	content: '';
+    position: absolute;
+	top: 0;
+    height: 8px;
+    background-color: #f7f7f7;
+}
 
-
-
-
+.letter_span20 {
+	content: '';
+    position: absolute;
+    top: 0;
+    height: 8px;
+    background-color: #f7f7f7;
+    
+}
 
 
 
