--- a/src/main/webapp/css/update.css
+++ b/src/main/webapp/css/update.css
@@ -48,7 +48,7 @@ a, button {
 .mypage_update_box {
 	display: inline-block;
     position: absolute;
-    margin-left: 40px;
+    margin-left: 50px;
     margin-top: 0px;
 }
 
@@ -62,41 +62,43 @@ a, button {
 
 .mypage_title {
 	display: block;	
-    padding: 40px 0;    
+    padding-bottom: 20px;    
     font-size: 24px;
     line-height: 24px;
-    font-weight: 700;
+    font-weight: 600;
     letter-spacing: -.24px;
     color: #222;
 }
 
 .update_box {
-	margin: 0 80 40 0px;
 	margin-bottom: 80px;
 }
 
 
 .update_box .inbox {
     border-top: #d3d3d3 1px solid;
-    padding: 38px 0 50px;
+    padding: 0px auto;
 }
 
-.update_box .inbox .inner:first-of-type {
-    padding-top: 40px;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 0 0 40px;
+.update_box .inbox .inner {
+    max-width: 800px;    
+    margin: 30px 50px;
+}
+
+.update_box .inbox .inner .update_info {
+	padding-bottom: 10px;
 }
 
 .row {
     display: block;
-    margin: 0;
+    margin: 15px;
     padding: 0;
 }
 
 .update_box .row .update_name {
     float: left;
     width: 120px;
+    margin-right: 10px;
     padding-top: 10px;
     font-size: 16px;
     line-height: 24px;
@@ -121,7 +123,7 @@ a, button {
     background: 0 0;
     outline: 0;
     display: block;
-    width: 100%;
+    width: 350px;
     height: 44px;
     margin-right: 110px;
     padding: 0 20px;
@@ -138,7 +140,7 @@ a, button {
     padding: 0;
     margin: 0;
     display: inline-block;
-    width: 45%;
+    width: 150px;
     height: 44px;
     margin-right: 10px;
     padding: 0 20px;
@@ -156,7 +158,7 @@ a, button {
     padding: 0;
     margin: 0;
     display: inline-block;
-    width: 22%;
+    width: 85px;
     height: 44px;
     margin-right: 10px;
     padding: 0 20px;
@@ -188,97 +190,152 @@ a, button {
     text-align: center;
 }
 
-.anniversary {
-			border: 1px solid #ffca18;
-			border-radius: 5px;
-			margin: 10px 10px;
-			padding: 30px 30px;
+.update_box .inbox .anniversary_box {
+	display: block;
+	margin-top: 50px;
+    border-top: #d3d3d3 1px solid;
+    padding-top: 30px;
 }
 
-		
-		.yellowBtn {
-			width: 200px;
-			height: 33px;
-		}
-		
-		.textBlack {
-			color: #000000;
-			font-size: 14px;
-			font-weight: 800;
-		}
-		
-		.textRed {
-			color: #FF0000;
-		}
-		
-		.textGreen {
-			color: #46cfa7;
-			font-weight: bold;
-			font-size: 16px;
-			letter-spacing: -0.5px;
-		}
-		
-		.textSubject {
-			color: #000000;
-			font-size: 22px;
-			font-weight: bold;
-		}
-		
-		.textNormal {
-			color: #878787;
-			font-size: 14px;
-			font-weight: bold;
-		}
-		
-		#annInsert {
-			margin: 40px auto;
-			border: none;
-			width: 100%;
-			text-align: center;			
-		}
-		
-		#annInsert td{
-			padding-top: 5px;
-			padding-bottom: 15px;
-			border-bottom: 1px solid #efefef;
-		}
-				
-		.d_day_cell {
-			width: 80px;
-			color: #46cfa7;
-			font-size: 16pt;
-			height: 20px;
-			font-weight: bold;
-		}
-		
-		.date_cell {
-			width: 150px;
-			color: #676767;
-			font-size: 18px; 
-		}
-		
-		.ann_name_cell {
-			text-align: left;
-			width: 250px;
-			color: #676767;
-			font-size: 18px;
-		}
-		
-		.repeat_cell {
-			width: 100px;
-			color: #676767;
-			font-size: 18px; 
-		}
-		
-		.update_cell, .delete_cell {
-			width: 50px;
-			color: #878787;
-			font-size: 15px;
-			text-decoration: underline;
-		}	
-							
-		.updateForm input[type="radio"] {
-			width: 100px;
-		}
+.update_box .inbox .anniversary_box .anniversary {
+	border: 1px solid #ffca18;
+	border-radius: 5px;
+	margin: 10px 10px;
+	padding: 30px 30px;
+}
 
+.update_box .inbox .anniversary_box .anniversary .comment {
+	display: block;
+	text-align: center;
+	line-height: 20px;
+}
+
+.textSubject {
+	color: #000000;
+	font-size: 22px;
+	font-weight: bold;
+	padding: 5px auto;
+}
 		
+.textNormal {
+	color: #878787;
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+	padding: 5px auto;
+}	
+
+.update_box .inbox .anniversary_box .anniversary .ann_table {
+	display: block;
+}
+
+.textRed {
+	color: #FF0000;
+}
+		
+.textGreen {
+	color: #46cfa7;
+	font-weight: bold;
+	font-size: 16px;
+	letter-spacing: -0.5px;
+}
+
+.textBlack {
+	color: #000000;
+	font-size: 14px;
+	font-weight: 800;
+	text-align: center;
+
+}		
+
+#annInsert {
+	margin: 40px auto;
+	border: none;
+	width: 100%;
+	text-align: center;			
+}
+	
+#annInsert td{
+	padding-top: 5px;
+	padding-bottom: 15px;
+	border-bottom: 1px solid #efefef;
+}
+
+.d_day_cell {
+	width: 80px;
+	color: #46cfa7;
+	font-size: 16pt;
+	height: 20px;
+	font-weight: bold;
+}
+
+.date_cell {
+	width: 150px;
+	color: #676767;
+	font-size: 18px; 
+}
+
+.ann_name_cell {
+	text-align: left;
+	width: 250px;
+	color: #676767;
+	font-size: 18px;
+}
+		
+.repeat_cell {
+	width: 100px;
+	color: #676767;
+	font-size: 18px; 
+}
+
+.update_cell, .delete_cell {
+	width: 50px;
+	color: #878787;
+	font-size: 15px;
+	text-decoration: underline;
+}	
+
+.anniversary_box .anniversary .ann_submit .btn {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: 0 0;
+    outline: 0;
+    cursor: pointer;
+    display: block;
+    min-width: 145px;
+    height: 40px;
+    padding: 0 15px;
+    margin: 0 auto;
+    border-radius: 20px;
+    border: #ffcd32 1px solid;
+    background-color: #ffcd32;
+    font-size: 13px;
+    line-height: 38px;
+    font-weight: 300;
+    letter-spacing: -.18px;
+    color: #222;
+}
+
+.member_submit {
+    max-width: 620px;
+    margin: 20px auto 0;
+    padding-top: 40px;
+    border-top: #d3d3d3 1px solid;
+}
+
+.member_submit .more_info {
+    padding: 0 0 0 30px;
+}
+
+.member_submit .more_info .information {
+	font-size: 14px;
+}
+
+.member_submit .member_update {
+    max-width: 320px;
+    margin: 0 auto;
+}
+
+
+
