--- a/src/main/webapp/css/mypage_qnaList.css
+++ b/src/main/webapp/css/mypage_qnaList.css
@@ -243,7 +243,7 @@ tbody {
 
 .qnaList_span4 {
 	padding-left: 25px;
-	position: relative;
+/* 	position: relative; */
     display: block;
 	font-size: 15px;
     line-height: 20px;
