--- a/src/main/webapp/css/letter.css
+++ b/src/main/webapp/css/letter.css
@@ -120,6 +120,7 @@
 }
 
 .letter_label {
+	display: block;
 	cursor: pointer;
 }
 
@@ -145,18 +146,7 @@ input {
 }
 
 .letter_input {
-	width: 140px;
-	height: 50.2px;
-	padding: 0;
-    margin: 0;
-    border: none;
-    background: 0 0;
-    outline: 0;
-    cursor: pointer;
     position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
     opacity: 0;
 }
 
@@ -337,12 +327,11 @@ b {
     border: none;
     cursor: pointer;
     width: 320px;
-    background: #ffcd32;
+    height: 50px;
+    background: #eeeeee;
     text-align: center;
     font-size: 14px;
-    line-height: 48px;
-    font-weight: 300;
-    letter-spacing: -.21px;
+    font-weight: 450;
     color: #222;
     border-radius: 5px;
 }
@@ -393,9 +382,9 @@ b {
     background-color: #f7f7f7;
 }
 
-
-
-
+.letter_bottom_space {
+	height: 50px;
+}
 
 
 
@@ -404,9 +393,10 @@ ul.letter_ul{
 	margin-top: 17px;
 	margin-left: 14px;
 }
-ul.letter_ul li.current{
-	color: #222;
+.letter_ul .current .letter_label .letter_span11 {
+	font-weight: 500;
 }
+
 .letter_div13{
 	display: none;
 	padding: 15px;
