--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -52,7 +52,7 @@ a, button {
 /* header */
 .main_menu{
   background-color: rgba(255, 255, 255, 0.990);
-  width: 1120px;
+  width: 100%;
   left: 0;
   text-align: center;
   z-index: 100;
