--- a/src/main/webapp/css/classReserv.css
+++ b/src/main/webapp/css/classReserv.css
@@ -13,16 +13,29 @@
 	height: 550px;
 }
 
+.shop_class_mainImg img {
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .shop_class_subImg_box {
-	display: inline-block;
+    display: inline-block;
     width: 570px;
-    margin: 0 -10px;
+    margin: 20px -10px 0;
     font-size: 0;
 }
 
+.shop_class_subImg img {
+	width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .shop_class_subImg{
-	display: inline-block;
+    display: inline-block;
     width: 25%;
+    height: 122.5px;
     padding: 0 10px;
 }
 
