--- a/src/main/webapp/css/join.css
+++ b/src/main/webapp/css/join.css
@@ -7,10 +7,6 @@
   box-sizing: inherit;
 }
 
-body {
-  box-sizing: border-box;
-}
-
 .top_banner {
 	top: 36px;
 	position: static;
@@ -21,13 +17,12 @@ body {
     text-align: center;
 }
 
-.top_banner h2 {
-    height: auto;
+.top_banner h2 {    
     padding: 40px 0;
     border-bottom: none;
     font-size: 30px;
     line-height: 45px;
-    font-weight: 800;
+    font-weight: 500;
     letter-spacing: -.6px;
     color: #333;
 }
@@ -84,7 +79,7 @@ body {
     background: 0 0;
     outline: 0;
     display: block;
-    width: 100%;
+    width: 350px;
     height: 44px;
     margin-right: 110px;
     padding: 0 20px;
@@ -102,7 +97,7 @@ body {
     padding: 0;
     margin: 0;
     display: inline-block;
-    width: 45%;
+    width: 150px;
     height: 44px;
     margin-right: 10px;
     padding: 0 20px;
@@ -121,7 +116,7 @@ body {
     padding: 0;
     margin: 0;
     display: inline-block;
-    width: 22%;
+    width: 85px;
     height: 44px;
     margin-right: 12px;
     padding: 0 20px;
@@ -146,7 +141,7 @@ body {
     border-radius: 5px;
     font-size: 14px;
     line-height: 44px;
-    font-weight: 700;
+    font-weight: 400;
     letter-spacing: -.21px;
     color: #787878;
     background: #ececec;
@@ -154,11 +149,12 @@ body {
 }
 
 .join_us_box .row .join_input .radio_gender {
-	width: 120px;
-	height: 30px;
-	margin-right: 20px;
+	width: 100px;
+	height: 35px;
+	vertical-align: middle;
 	text-align: center;
-	font-size: 20px;	
+	font-size: 20px;
+	margin: 15px;	
 }
 
 .join_us_box .row .join_input .gender_txt {
@@ -167,31 +163,17 @@ body {
 }
 
 .checkMessage{
-	color: #FF0000;
-	padding-bottom: 5px;
+	color: #ff4e50;
     font-size: 14px;
     font-weight: 500;
-    margin-bottom: 5px;
+    padding: 5px auto;
+    vertical-align: middle;
  } 
  
  .join_us_box .bottomForm {
     max-width: 620px;
     margin: 0 auto;
     padding: 0;
-}
-
-ul {
-	list-style: none;
-	margin: 0;
-    padding: 0;
-    letter-spacing: -.5px;
-    outline-width: 1px;
-}
-
-li {
-    display: list-item;
-    text-align: -webkit-match-parent;
-    line-height: 15px;
 }
 
 .join_us_box .bottomForm .agreement_list {
@@ -255,3 +237,105 @@ li {
 .join_us_box bottomForm .inner .row {
     margin-top: 40px;
 }
+
+.terms_box {
+    padding-top: 25px;
+    border-top: #d3d3d3 1px solid;
+}
+
+.terms_box .terms_title .row {
+    display: block;
+    margin-bottom: 15px;
+    padding: 0;	
+}
+
+.terms_box .terms_title .join_name {
+	 float: left;
+    width: 120px;
+    padding-top: 10px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    letter-spacing: -.24px;
+    color: #222;
+    position: relative;
+}
+
+.terms_box .terms_title .join_input{
+	margin-top: 0;
+    overflow: hidden;
+    padding-right: 140px;
+    position: relative;
+    display: block;
+}
+
+.terms_box .terms_list {
+	padding: 15px auto;
+}
+
+.terms_box .terms_list .agreement_list {
+    padding: 10px 20px 20px;
+    border: #ececec 1px solid;
+    border-radius: 5px;
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 100;
+    letter-spacing: -.24px;
+    color: #878787;
+}
+
+.terms_box .terms_list .agreement_list input[type=checkbox] {
+	width: 15px;
+	height: 15px;
+}
+
+.terms_box .terms_list .agreement_list .terms_txt {
+	margin-left: 5px;
+}
+
+.terms_box .terms_list .agreement_list .agree_all {
+	border-bottom: #ececec 1px solid;
+	padding-top: 15px;
+	padding-bottom: 15px;
+
+}
+
+.terms_box .terms_list .agreement_list .agree_part {
+    margin-top: 10px;
+}
+
+.terms_link {
+	text-align: center;
+	padding: 10px 0;
+}
+
+.terms_submit {
+	margin: 5px auto;	
+	text-align: center;
+}
+
+.terms_submit .submit_button {
+	padding: 0 0;
+	display: inline-block;
+}
+
+.terms_submit  .submit_button .btn_submit {
+    width: 360px;
+    height: 52px;
+    margin: 0 auto;
+    font-size: 16px;
+    line-height: 52px;
+    font-weight: 300;
+    letter-spacing: -.24px;
+    color: #787878;
+    border-radius: 26px;
+    border: none;    
+}
+
+
+
+
+
+
+
+
