--- a/src/main/webapp/css/mypage_qnaList.css
+++ b/src/main/webapp/css/mypage_qnaList.css
@@ -252,6 +252,7 @@ tbody {
     font-weight: 300;
     letter-spacing: -.21px;
     color: #222;
+ 
 }
 
 .qnaList_span5 {
@@ -260,7 +261,7 @@ tbody {
 	display: inline-block;
 	font-size: 16px;
     line-height: 20px;
-    font-weight: 100;
+    font-weight: 400;
     letter-spacing: -.21px;
     color: #222;
 	font-size: 13px;
@@ -282,4 +283,32 @@ tbody {
 	border-left: #ececec 1px solid;
 	position: relative;
 	padding: 56px;
+}
+
+.qnaList_answer::before {
+	content: '';
+	display: block;
+    position: absolute;
+	background-image: url(../img/kukka.png);
+    background-position: -272px -775px;
+    width: 24px;
+    height: 24px;
+    background-size: 1252px 845px;
+    top: 117px;
+    left: 35px;
+}
+
+.qnaList_div4 {
+	width: 441.73px;
+	height: 250.5px;
+	margin-top: 100px;
+    margin-left: 255px;
+}
+
+.qnaList_span8 {
+	font-size: 17px;
+    line-height: 20px;
+    font-weight: 300;
+    letter-spacing: -.21px;
+    color: #222;
 }
