주문결제 페이지 css

--- a/src/main/webapp/css/mypage_qnaInsert.css
+++ b/src/main/webapp/css/mypage_qnaInsert.css
@@ -5,7 +5,11 @@
   margin: 0;
   box-sizing: inherit;
 }
-
+.container {
+		display: flex;
+		width: 1240px;
+		margin: 100px auto;
+}
 body {
   box-sizing: border-box;
 }
