--- a/src/main/webapp/css/mypage_orderHistoryDetail.css
+++ b/src/main/webapp/css/mypage_orderHistoryDetail.css
@@ -54,6 +54,7 @@ a, button {
 	margin-right: 20px;
 	font-size: 18px;
 	font-weight: 600;
+	margin-bottom: 20px;
 }
 #mypage_orderHistoryDetail_dd{
 	float: left;
@@ -180,16 +181,19 @@ a, button {
 
 .mypage_orderHistoryDetail_table_b{
 	width: 750px;
-	height: auto;
+/* 	height: auto; */
 	margin: 0;
 	padding: 0;
 	border-top: 2px solid #FFD228;
 	margin-top: 20px;
+	margin-bottom:20px;
+	clear: both;
 }
 #mypage_orderHistoryDetail_del_tr{
 	background-color: #fff9ee;
 	height: 100px;
 	border-right: 1px solid;
+	margin-top: 10px; 
 }
 #mypage_orderHistoryDetail_del_td{
 	height: 50px;
