--- a/src/main/webapp/css/itemDetail.css
+++ b/src/main/webapp/css/itemDetail.css
@@ -294,8 +294,7 @@ html {
 }
 
 .desc_image {
-	width: 740px;
-	margin: 0 auto;
+	text-align: center;
 }
 
 .sticky.visible {
@@ -334,6 +333,7 @@ html {
 	font-weight: 500;
 }
 
+/* 리뷰  */
 .review_title {
 	border-top: solid 10px #f9f9f9;
 	margin : 30px 0 0 0;
