클래스 상세페이지 css

--- a/src/main/webapp/css/itemDetail.css
+++ b/src/main/webapp/css/itemDetail.css
@@ -432,7 +432,8 @@ html {
 	width: 550px;
 	font-size: 16px;
 	font-weight: 300px;
-	color: #222222
+	color: #222222;
+	cursor: pointer;
 }
 
 .row .td3, .row .td4 {
