--- a/src/main/webapp/css/order_insert.css
+++ b/src/main/webapp/css/order_insert.css
@@ -77,6 +77,7 @@ a, button {
 	font-weight: 500;
 	font-size: 15px;
 	padding-left: 20px; 
+	width: 150px;
 }
 #order_insert_i:after{
 	content: '*';
