--- a/src/main/webapp/css/mypage_orderHistoryDetail.css
+++ b/src/main/webapp/css/mypage_orderHistoryDetail.css
@@ -204,7 +204,7 @@ a, button {
 	padding-left: 5px;
 }
 #mypage_orderHistoryDetail_del_td_span{
-	color: #7FFFD4
+	color: #7FFFD4;
 	
 }
 #mypage_orderHistoryDetail_del_tr_b{
