--- a/src/main/webapp/css/admin_class_list.css
+++ b/src/main/webapp/css/admin_class_list.css
@@ -21,9 +21,9 @@
 }
 
 #img {
-		width: 180px;
+		width: 230px;
 		height: 180px;
-		border-radius: 5px;
+		border-radius: 10px;
 		border: 1px solid #fff;
 }
 
@@ -57,6 +57,10 @@
 #btn:hover {
 	background-color: #FFCD12;
 	cursor:pointer;
+}
+#class_subject{
+	
+	font-family: 'Jua', sans-serif;
 }
 #class_subject:hover {
 	color: #FFDF24;
