레이아웃수정

--- a/src/main/webapp/css/mypage_orderHistory.css
+++ b/src/main/webapp/css/mypage_orderHistory.css
@@ -1,102 +1,99 @@
 @charset "UTF-8";
 
-.container {
-		display: flex;
-		width: 1240px;
-		margin: 100px auto;
-}
+.tabs {
+	list-style: none; 
+	display: flex;
+} 
 
-a, a:active, a:visited {
-	color: black;
-	text-decoration: none;
-}
-
-a, button {
-	cursor: pointer;
-}
-
-ul.tabs {
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-	margin-top: 30px;
-	margin-left: 3px;
-	width: 730px;
-	margin-right: 20px;
-}
-
-.mypage_orderHistory_all ul.tabs li {
+.tabs li{  
 	background: none;
-	display: inline-block;
-	padding: 10px 15px;
-	cursor: pointer;
-	width: 395px;
-	text-align: center;
-	font-size: 15px;
+    cursor: pointer;
+    font-size: 15px;
     color: #8e8d8d;
     font-weight: 300;
-    border: 1px solid #e0e0e0;
-}
-
-ul.tabs li.current_clicked {
-	border-top: 2px solid #FFD228;
-	border-bottom: none;
-}
+    padding: 13px 136px;
+}  
 
 .tab-content {
 	display: none;
 }
 
-.tab-content.current {
-	display: inherit;
+.current{ 
+	display: inherit; 
+} 
+
+.tabs .current_clicked {
+	border: 1px solid #e0e0e0;
+    border-bottom: none;
+    border-top: 2px solid #ffcd32;
 }
-.tabs.tab_link_current.tab_link{
-	font-size: 20px;
+
+.tab-link {
+	border: 1px solid #e0e0e0;
 }
 
 
+/* 본문 */
 .mypage_orderHistory_all {
-	float: right;
-	height: 100%;
-	padding: 0;
-	margin: 0;
+	display: inline-grid;
+    position: relative;
+    margin-left: 108px;
 }
 
 #mypage_orderHistory_title {
-	font-size: 20px;
+	font-size: 22px;
+    font-weight: 500;
+    line-height: 35px;
+    margin-bottom: 15px;
 }
 
 .mypage_orderHistory_main {
-	width: 730px;
+    margin-top: 39px;
 }
 
 #mypage_orderHistory_table {
-	width: 730px;
-	margin-bottom: 200px;
-	margin-top: 30px;
+	border-collapse: collapse;
+	border-spacing: 0;
+	border-top: 1px solid gray;
 }
 
-#mypage_orderHistory_table_td_s {
+.mypage_orderHistory_head th:first-child span {
+    padding: 0px 38px;
+    display: inline-block;
+}
+
+.mypage_orderHistory_head th span {
+    font-size: 13px;
+    font-weight: 500;
+}
+
+.mypage_orderHistory_head th {
 	background-color: #f7f7f7;
-	height: 50px;
-	font-size: 13px;
-	font-weight: 700;
-	text-align: center;
-	width: 150px;
+	border-top: 1px solid #d2d1d1;
+    padding: 20px 15px;
 }
 
-#mypage_orderHistory_table_td_b {
-	background-color: #f7f7f7;
-	height: 50px;
-	font-size: 13px;
-	font-weight: 700;
-	text-align: center;
+.mypage_orderHistory_head th:not(:last-child) {
+	border-right: 1px solid #e8e8e8;
 }
 
-#mypage_orderHistory_table_th {
-	text-align: center;
-	font-size: 15px;
+
+.mypage_orderHistory_can {
+    width: 100%;
+    height: 300px;
+    text-align: center;
 }
+
+.mypage_orderHistory_can tr td span {
+	display: block;
+    margin: 18px 0;
+    font-size: 15px;
+    color: #222;
+}
+
+/* -------------------------  */
+
+
 
 #mypage_orderHistory_situation {
 	text-align: center;
@@ -110,7 +107,6 @@ ul.tabs li.current_clicked {
 	margin: 0;
 	text-align: left;
 	border-bottom: 1px solid #aaaaaa;
-	
 }
 
 #mypage_orderHistory_img {
@@ -136,13 +132,8 @@ ul.tabs li.current_clicked {
 	font-weight: 300;
 	text-align: center;
 }
-.mypage_orderHistory_can{
-	text-align: center;
-	font-size: 15px;
-	font-weight: 500;
-	padding: 20px;
-	width: 730px;
-}
+
+
 #mypage_orderHistory_btn{
 	width: 80px;
 	height: 30px;
